# LoliVPN-2024

./: .eslintrc.js  .gitignore  .prettierrc  README.md  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
app/assets/css/: animations.css  base.css  variables.css
app/components/UI/: UiButton.vue  UiModal.vue  UiToggleSwitch.vue
app/components/VPN/: VPNConnectionBadge.vue  VPNConnectionCard.vue  VPNConnectionInfo.vue  VPNConnectionLine.vue  VPNFloatingPanel.vue  VPNHeader.vue  VPNLoadingOverlay.vue  VPNNotifications.vue  VPNPoint.vue  VPNQuickActions.vue  VPNServerItem.vue  VPNServerList.vue  VPNSettingGroup.vue  VPNSettingItem.vue  VPNSettingsModal.vue  VPNSidebar.vue  VPNSpeedChart.vue  VPNSpeedDisplay.vue  VPNStatsView.vue  VPNTooltip.vue  VPNWindowControls.vue  VPNWorldMap.vue
app/composables/: useDevice.ts  useServers.ts  useSettings.ts  useSidebar.ts  useTauri.ts  useTauriWindow.ts  useVPN.ts  useVPNStats.ts
app/layouts/: vpn.vue
app/pages/: index.vue
app/stores/: vpn.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: vpn_commands.rs
tests/: setup.ts
tests/components/: VPNConnectionCard.test.ts
tests/composables/: useVPN.test.ts
tests/e2e/: vpn-connection.spec.ts
tests/stores/: vpn.test.ts
