[package]
name = "loli-vpn"
version = "1.0.0"
description = "Modern VPN client built with Tauri and Vue"
authors = ["noname"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
log = "0.4"

#[dependencies.tauri-plugin-vpn]
#path = "./plugins/vpn"

[features]
custom-protocol = ["tauri/custom-protocol"]
